@@ -16,15 +16,3 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
-
-compileTestJava {
-    options.compilerArgs += ['--enable-preview']
-}
-
-test {
-    jvmArgs += ['--enable-preview']
-}
